--- a/OnlineDostava/src/app/Components/UserProfile/user-profile/user-profile.component.html
+++ b/OnlineDostava/src/app/Components/UserProfile/user-profile/user-profile.component.html
@@ -67,6 +67,7 @@
         aria-label="Recipient's username"
         aria-describedby="basic-addon2"
         formControlName="birthDate"
+        max=""
       />
     </div>
     <br />
@@ -107,7 +108,7 @@
         <span class="input-group-text" id="basic-addon1">Confirm password</span>
       </div>
       <input
-        type="password2"
+        type="password"
         class="form-control"
         placeholder="Confirm password to make changes"
         aria-label="Recipient's username"
