--- a/OnlineDostava/src/app/Components/NavBar/nav-bar/nav-bar.component.html
+++ b/OnlineDostava/src/app/Components/NavBar/nav-bar/nav-bar.component.html
@@ -11,7 +11,11 @@
   >
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
+  <div
+    class="collapse navbar-collapse"
+    id="navbarNav"
+    *ngIf="user.isAccepted(accountStatus); else elseBlock"
+  >
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="#"
@@ -21,21 +25,31 @@
       <li class="nav-item">
         <a class="nav-link" href="/user">Profil</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="user.isOrdinaryUser(userType)">
         <a class="nav-link" href="/neworder">Nova/Trenutna porudzbina</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="user.isAdministrator(userType)">
         <a class="nav-link" href="/verification">Verifikacija</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="user.isOrdinaryUser(userType)">
         <a class="nav-link" href="/myorders">Moje porudzbine</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="user.isDeliverer(userType)">
         <a class="nav-link disabled" href="#">Sve porudzbine</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="user.isAdministrator(userType)">
         <a class="nav-link" href="/addProduct">Dodavanje proizvoda</a>
       </li>
     </ul>
   </div>
+  <ng-template #elseBlock>
+    <div *ngIf="user.isProcessing(accountStatus); else elseBlock2">
+      <div>Nalog ceka potvrdu od administratora.</div>
+    </div>
+    <ng-template #elseBlock2>
+      <div>
+        <div>Vasa registracija je odbijena.</div>
+      </div>
+    </ng-template>
+  </ng-template>
 </nav>
