--- a/OnlineDostava/src/app/Components/AddProduct/addproduct/addproduct.component.html
+++ b/OnlineDostava/src/app/Components/AddProduct/addproduct/addproduct.component.html
@@ -60,11 +60,12 @@
         <tr *ngFor="let product of products">
           <td>{{ product.name }}</td>
           <td>
-            <table>
+            {{ product.ingredients }}
+            <!-- <table>
               <td *ngFor="let ingredient of product.ingredients">
                 {{ ingredient }}
               </td>
-            </table>
+            </table> -->
           </td>
           <td>{{ product.price }}</td>
         </tr>
