--- a/OnlineDostava/src/app/Components/NewOrderComponent/neworder/neworder.component.html
+++ b/OnlineDostava/src/app/Components/NewOrderComponent/neworder/neworder.component.html
@@ -19,7 +19,7 @@
             <input
               class="form-control"
               placeholder="type your comment..."
-              type="password"
+              type="text"
               formControlName="comment"
             />
           </div>
