--- a/OnlineDostava/src/app/Components/NewOrders/neworders/neworders.component.html
+++ b/OnlineDostava/src/app/Components/NewOrders/neworders/neworders.component.html
@@ -6,7 +6,7 @@
         <th scope="col">Address</th>
         <th scope="col">Price</th>
         <th scope="col">Products</th>
-        <th>Status</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -14,12 +14,15 @@
         <td>{{ order.address }}</td>
         <td>{{ order.price }}</td>
         <td *ngFor="let product of order.products">{{ product.name }}</td>
-        <td *ngIf="order.accepted; else elseBlock">Finished</td>
-        <ng-template #elseBlock>
-          <td>
-            <div>Not accepted jet</div>
-          </td>
-        </ng-template>
+        <td *ngIf="!order.accepted">
+          <button
+            type="button"
+            class="btn btn-success"
+            (click)="onAccept(order.id)"
+          >
+            Accept
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
