--- a/OnlineDostava/src/app/Components/NavBar/nav-bar/nav-bar.component.html
+++ b/OnlineDostava/src/app/Components/NavBar/nav-bar/nav-bar.component.html
@@ -32,13 +32,19 @@
         <a class="nav-link" href="/verification">Verifikacija</a>
       </li>
       <li class="nav-item" *ngIf="user.isOrdinaryUser(userType)">
-        <a class="nav-link" href="/myorders">Moje porudzbine</a>
+        <a class="nav-link" href="/myorders">Prethodne porudzbine</a>
       </li>
       <li class="nav-item" *ngIf="user.isDeliverer(userType)">
         <a class="nav-link" href="/neworders">Nove porudzbine</a>
       </li>
+      <li class="nav-item" *ngIf="user.isDeliverer(userType)">
+        <a class="nav-link" href="/myorders">Moje porudzbine</a>
+      </li>
+      <!-- <li class="nav-item" *ngIf="user.isDeliverer(userType)">
+        <a class="nav-link" href="/currentdel">Nove porudzbine</a>
+      </li> -->
       <li class="nav-item" *ngIf="user.isAdministrator(userType)">
-        <a class="nav-link disabled" href="#">Sve porudzbine</a>
+        <a class="nav-link" href="/myorders">Sve porudzbine</a>
       </li>
       <li class="nav-item" *ngIf="user.isAdministrator(userType)">
         <a class="nav-link" href="/addProduct">Dodavanje proizvoda</a>
