--- a/OnlineDostava/src/app/Components/MyOrdersComponent/myorders/myorders.component.html
+++ b/OnlineDostava/src/app/Components/MyOrdersComponent/myorders/myorders.component.html
@@ -6,6 +6,7 @@
         <th scope="col">Address</th>
         <th scope="col">Price</th>
         <th scope="col">Products</th>
+        <th>Status(Accepted?)</th>
       </tr>
     </thead>
     <tbody>
@@ -13,12 +14,11 @@
         <td>{{ order.address }}</td>
         <td>{{ order.price }}</td>
         <td *ngFor="let product of order.products">{{ product.name }}</td>
-        <!-- <td *ngIf="order.accepted; else elseBlock">Finished</td>
-        <ng-template #elseBlock>
-          <td>
-            <div>Not accepted jet</div>
-          </td>
-        </ng-template> -->
+        <td *ngIf="order.accepted; else elseBlock2">Accepted</td>
+        <ng-template #elseBlock2>
+          <td>Not accepted</td>
+          >
+        </ng-template>
       </tr>
     </tbody>
   </table>
